# Sort-Tracker-cpp

./: CMakeLists.txt  README.md  README.txt
libncnn-linux_x86_64/include/ncnn/: platform.h
libncnn-linux_x86_64/lib/cmake/ncnn/: ncnnConfig.cmake
models/: traffic-tiny.param  traffic.names
src/: CrosslineDetector.cpp  CrosslineDetector.hpp  MotionDetector.cpp  MotionDetector.hpp  ObjectTracking.cpp  ObjectTracking.hpp  TypeData.hpp  main.cpp
src/detector/: ObjectDetector.cpp  ObjectDetector.hpp
src/sort-tracker/: KalmanTracker.cpp  KalmanTracker.h  ObjectTracker.cpp  ObjectTracker.hpp  TrackerManager.cpp  TrackerManager.hpp
